--- a/details/Dockerfile
+++ b/details/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:17-jdk-alpine
-WORKDIR /app
-COPY target/details-0.0.1-SNAPSHOT.jar details.jar
+ADD target/details-0.0.1-SNAPSHOT.jar.original details.jar
 EXPOSE 8084
 ENTRYPOINT ["java","-jar","details.jar"]
